Allow canceling in progress orchestrations (#355)
