# components/kyma-environment-broker/internal/model.go
@@ -132,6 +132,22 @@ type Operation struct {
 	OrchestrationID string
 }
 
+// Orchestration holds all information about an orchestration.
+// Orchestration performs operations of a specific type (UpgradeKymaOperation, UpgradeClusterOperation)
+// on specific targets of SKRs.
+type Orchestration struct {
+	OrchestrationID string
+	State           string
+	Description     string
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
+	Parameters      orchestration.Parameters
+}
+
+func (o *Orchestration) IsFinished() bool {
+	return o.State == orchestration.Succeeded || o.State == orchestration.Failed || o.State == orchestration.Canceled
+}
+
 type InstanceWithOperation struct {
 	Instance
 
@@ -187,22 +203,6 @@ type UpgradeKymaOperation struct {
 	ProvisioningParameters string `json:"provisioning_parameters"`
 
 	RuntimeVersion RuntimeVersionData `json:"runtime_version"`
-}
-
-// Orchestration holds all information about an orchestration.
-// Orchestration performs operations of a specific type (UpgradeKymaOperation, UpgradeClusterOperation)
-// on specific targets of SKRs.
-type Orchestration struct {
-	OrchestrationID string
-	State           string
-	Description     string
-	CreatedAt       time.Time
-	UpdatedAt       time.Time
-	Parameters      orchestration.Parameters
-}
-
-func (o *Orchestration) IsFinished() bool {
-	return o.State == orchestration.Succeeded || o.State == orchestration.Failed
 }
 
 func NewRuntimeState(runtimeID, operationID string, kymaConfig *gqlschema.KymaConfigInput, clusterConfig *gqlschema.GardenerConfigInput) RuntimeState {
@@ -389,7 +389,7 @@ func (do *UpgradeKymaOperation) SetProvisioningParameters(parameters Provisionin
 }
 
 func (o *Operation) IsFinished() bool {
-	return o.State != domain.InProgress
+	return o.State != orchestration.InProgress && o.State != orchestration.Pending && o.State != orchestration.Canceled
 }
 
 type ComponentConfigurationInputList []*gqlschema.ComponentConfigurationInput
